# LogicCore

./: .gitignore
.devcontainer/: Dockerfile  build.bash  devcontainer.json  docker-compose.yml  exe.bash
.github/workflows/: docker_auto_build_push.yml
docker/: docker-compose.yml
src/change_laser/: CMakeLists.txt  package.xml
src/change_laser/src/: laser_change.cpp  obstacle_extractor.cpp
src/my_algorithm/: CMakeLists.txt  package.xml
src/my_algorithm/src/: logic.py  nav_behave.py  random_generate.py
src/my_perception/: CMakeLists.txt  package.xml
src/my_perception/launch/: pointcloud_to_laserscan.launch.py
src/my_perception/scripts/: myserial.py  slam.py  slam_riqiang.py
src/nav_plugin/costmap_ultra/: CMakeLists.txt  package.xml
src/nav_plugin/costmap_ultra/include/costmap_ultra/: obstacle_layer.hpp
src/nav_plugin/costmap_ultra/plugins/: obstacle_layer.cpp
src/rc_navigation/config/: nav2_params.yaml  nav2_params_real.yaml  nav_decide_real.yaml  nav_decide_sim.yaml
src/rc_navigation/launch/: map_server.launch.py  nav_decide.launch.py  nav_decide_sim.launch.py  rc_nav.launch.py  rc_nav_sim.launch.py
src/rc_navigation/map/: court_map_real.yaml  court_map_sim.yaml
src/utils/: .gitignore  CMakeLists.txt  package.xml
src/utils/launch/: rosbag_play.launch.py  tf_trans_launch.launch.py
src/utils/src/: rosbag_listener.cpp  rosbag_player.cpp  tf_trans.cpp
