<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Elaina@todo.todo">Elaina</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions </depend>
  <depend>PCL</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
